--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -10,10 +10,6 @@ repository:
 
   allow_auto_merge: true
   delete_branch_on_merge: true
-
-collaborators:
-  - username: ww-openstax
-    permission: push
     
 teams:
   - name: ce-admins
@@ -21,7 +17,7 @@ teams:
   - name: ce-all
     permission: triage
   - name: content-managers
-    permission: push
+    permission: admin
   - name: katalyst
     permission: pull
   - name: disco-devs
