--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -17,7 +17,7 @@ teams:
   - name: ce-all
     permission: triage
   - name: content-managers
-    permission: admin
+    permission: push
   - name: katalyst
     permission: pull
   - name: disco-devs
